feat: minor code changes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header class="start">
+    <div>
+        <header>
+            <img class="scr" src="img/1647.jpg" alt="photo">
             <h1>Evgeny Sukhanov</h1><br>
             <p class="unders">Junior Frontend developer</p>
         </header>
+        <hr>
         <main>
             <h2>BIO</h2>
             <p>I started my career in 2000 as a laboratory
@@ -58,8 +61,9 @@
             <p class="code1">
                 LD A,5<br>LD B,10<br>LD C,A<br>ADD C,B<br>RET<br>
             </p>
-            <p class="other">*yes, i'm familiar with assembler</p>
+            <p class="other">*yep, i'm familiar with assembler</p>
         </aside>
+    </div>
         <footer>
             <a class="git" href="https://github.com/zelenolis">Zelenolis</a>
             <a href="https://rs.school/">
