fix: minor bugfixes

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h2>Skills</h2>
             <ul class="left">
                 <li>HTML5, CSS (Basic)</li>
-                <li>Version Control: Git & GitHub</li>
-                <li>Adobe Photoshop & Lightroom</li>
+                <li>Version Control: Git and GitHub</li>
+                <li>Adobe Photoshop and Lightroom</li>
                 <li>Excellent communication skills</li>
                 <li>Excellent teamwork skills</li>
                 <li>Excellent critical thinking and
